feat: add functional pages

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
-DATABASE_URL="postgresql://devhack:devhack@127.0.0.1:5533/devhack_blog_db?schema=public"
+DATABASE_URL="postgresql://devhack:devhack@127.0.0.1:5533/devhack_blog_db"
+
+GITHUB_ID=
+GITHUB_SECRET=
+
+NEXTAUTH_URL=
+NEXTAUTH_SECRET=
