--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.0.7",
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@next/font": "13.0.7",
     "@prisma/client": "^4.7.1",
     "next": "13.0.7",
     "next-auth": "^4.18.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-markdown": "^8.0.4"
   },
   "devDependencies": {
     "@types/node": "^18.11.17",
