--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bytemd/plugin-breaks": "^1.18.0",
+    "@bytemd/plugin-gemoji": "^1.18.0",
+    "@bytemd/plugin-gfm": "^1.18.0",
+    "@bytemd/plugin-highlight-ssr": "^1.18.0",
+    "@bytemd/plugin-mermaid": "^1.18.0",
+    "@bytemd/react": "^1.18.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.0.7",
     "@prisma/client": "^4.7.1",
