--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
     "@bytemd/plugin-breaks": "^1.18.0",
     "@bytemd/plugin-gemoji": "^1.18.0",
     "@bytemd/plugin-gfm": "^1.18.0",
+    "@bytemd/plugin-highlight": "^1.18.0",
     "@bytemd/plugin-highlight-ssr": "^1.18.0",
     "@bytemd/plugin-mermaid": "^1.18.0",
     "@bytemd/react": "^1.18.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.0.7",
     "@prisma/client": "^4.7.1",
+    "bytemd": "^1.18.0",
+    "github-markdown-css": "^5.1.0",
     "next": "13.0.7",
     "next-auth": "^4.18.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-markdown": "^8.0.4"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.17",
