--- a/package.json
+++ b/package.json
@@ -7,8 +7,22 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "lint:fix": "yarn lint --fix",
+    "prettier:format": "pretty-quick --pattern '**/*.{ts, tsx}' --verbose",
+    "postinstall": "prisma generate",
+    "prepare": "husky install"
   },
+  "husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+  "lint-staged": {
+		"*.ts": [
+			"yarn lint:fix",
+			"yarn prettier:format --staged"
+		]
+	},
   "dependencies": {
     "@bytemd/plugin-breaks": "^1.18.0",
     "@bytemd/plugin-gemoji": "^1.18.0",
@@ -35,7 +49,11 @@
     "autoprefixer": "^10.4.13",
     "eslint": "^8.30.0",
     "eslint-config-next": "^13.0.7",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
     "postcss": "^8.4.20",
+    "prettier": "^2.8.3",
+    "pretty-quick": "^3.1.3",
     "prisma": "^4.7.1",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4"
