--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "devhacknews",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
+ "name": "devhacknews",
+ "version": "1.0.0",
+ "private": true,
+ "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "next:lint": "next lint",
+    "lint": "tsc --noEmit && eslint . --ext .ts --max-warnings=0",
     "lint:fix": "yarn lint --fix",
     "prettier:format": "pretty-quick --pattern '**/*.{ts, tsx}' --verbose",
     "postinstall": "prisma generate",
     "prepare": "husky install"
-  },
-  "husky": {
-		"hooks": {
-			"pre-commit": "lint-staged"
-		}
-	},
-  "lint-staged": {
-		"*.{ts, tsx}": [
-			"yarn lint:fix",
-			"yarn prettier:format --staged"
-		]
-	},
-  "dependencies": {
+ },
+ "husky": {
+    "hooks": {
+    "pre-commit": "lint-staged"
+    }
+ },
+ "lint-staged": {
+    "**/*.(ts|tsx)": [
+    "yarn lint:fix",
+    "yarn prettier:format --staged"
+    ]
+ },
+ "dependencies": {
     "@bytemd/plugin-breaks": "^1.18.0",
     "@bytemd/plugin-gemoji": "^1.18.0",
     "@bytemd/plugin-gfm": "^1.18.0",
@@ -41,14 +42,16 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sharp": "^0.31.3"
-  },
-  "devDependencies": {
+ },
+ "devDependencies": {
     "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.30.0",
     "eslint-config-next": "^13.0.7",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
     "postcss": "^8.4.20",
@@ -57,5 +60,5 @@
     "prisma": "^4.7.1",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4"
-  }
+ }
 }
